Add batch creation UI, API client, and scheduler tweaks

--- a/BatchPortal/Pages/Shared/_Layout.cshtml
+++ b/BatchPortal/Pages/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                             <a class="nav-link" asp-area="" asp-page="/Batches/Index">Batches</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-page="/Batches/Create">New Batch</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="http://localhost:3000" target="_blank" rel="noopener noreferrer">Grafana</a>
             </li>
                     </ul>
