--- a/BatchPortal/Pages/Shared/_Layout.cshtml
+++ b/BatchPortal/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@inject Microsoft.Extensions.Configuration.IConfiguration Configuration
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -29,8 +30,8 @@
                             <a class="nav-link" asp-area="" asp-page="/Batches/Create">New Batch</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="http://localhost:3000" target="_blank" rel="noopener noreferrer">Grafana</a>
-            </li>
+                            <a class="nav-link" href="@Configuration["Monitoring:GrafanaUrl"]" target="_blank" rel="noopener noreferrer">Grafana</a>
+                        </li>
                     </ul>
                 </div>
             </div>
