--- a/BatchPortal/Pages/_ViewImports.cshtml
+++ b/BatchPortal/Pages/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using BatchPortal
+@using BatchPortal.Shared
 @namespace BatchPortal.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, BatchPortal
